# fast-agent-docs

./: .gitignore  generate_reference_docs.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  wrangler.toml
agent/: agent.py  fastagent.config.yaml
agent/docs/: README.md  getting-started.md
docs/: getting_started.md  index.md  intro.md
docs/_generated/: README.md  _generation_warnings.md  model_aliases_anthropic.md  model_aliases_codexresponses.md  model_aliases_deepseek.md  model_aliases_google.md  model_aliases_groq.md  model_aliases_hf.md  model_aliases_openai.md  model_aliases_openai_merged.md  model_aliases_xai.md  model_catalog_aliyun.md  model_catalog_anthropic.md  model_catalog_codexresponses.md  model_catalog_deepseek.md  model_catalog_google.md  model_catalog_groq.md  model_catalog_hf.md  model_catalog_openai.md  model_catalog_responses.md  model_catalog_xai.md  model_presets_anthropic.md  model_presets_codexresponses.md  model_presets_deepseek.md  model_presets_google.md  model_presets_hf.md  model_presets_openai.md  model_presets_responses.md  model_presets_xai.md  models_reference.md  request_params_reference.md
docs/acp/: customizing_agents.md  index.md
docs/agents/: defining.md  files.md  function_tools.md  index.md  instructions.md  prompting.md  running.md  skills.md  tool_runner.md  workflows.md
docs/examples/: azure-config.md
docs/get-started/: index.md  interactive.md  mcp-config.md
docs/getting_started/: installation.md
docs/guides/: codex.md  (+3 more)
in-progress/: prompting.md
overrides/: main.html
(+28 files in other folders)
