[project]
name = "fast-agent-docs"
version = "0.1.0"
description = "Documentation site for fast-agent"
requires-python = "==3.13.5"
dependencies = [
  "cairosvg==2.7.1",
  "mkdocs==1.6.1",
  "mkdocs-get-deps==0.2.0",
  "mkdocs-llmstxt==0.1.0",
  "mkdocs-material==9.6.11",
  "mkdocs-material-extensions==1.3.1",
  "mkdocs-minify-plugin==0.8.0",
  "mkdocs-video>=1.5.0",
  "pillow==12.1.1",
  "pymdown-extensions==10.14.3",
]

[tool.uv]
package = false
