[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-agent-docs"
version = "0.1.0"
description = "Documentation site for fast-agent"
requires-python = ">=3.11,<3.14"
dynamic = ["dependencies"]

[tool.uv]
package = false

[tool.setuptools]
packages = []
py-modules = []

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
